[package]
name = "Introduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="weird_algorithm"
path="src/bin/weird_algorithm/weird_algorithm.rs"

[[bin]]
name="missing_number"
path="src/bin/missing_number/missing_number.rs"